// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Duration.vue should render 1`] = `
<span>
  473352:00:00
</span>
`;

exports[`Duration.vue should render short format 1`] = `
<span>
  54years
</span>
`;
